# aws-lc-rs

./: .gitmodules  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: integration.yml
app/: Cargo.toml  Justfile
app/src/: main.rs
aws-lc-fips-sys/builder/: main.rs
aws-lc-fips-sys/src/: lib.rs
aws-lc-rs/: Cargo.toml  build.rs
aws-lc-sys/builder/cc_builder/: aarch64_apple_darwin.rs  aarch64_unknown_linux_gnu.rs  aarch64_unknown_linux_musl.rs  i686_unknown_linux_gnu.rs  riscv64gc_unknown_linux_gnu.rs  x86_64_apple_darwin.rs  x86_64_unknown_linux_gnu.rs  x86_64_unknown_linux_musl.rs
links-testing/: Cargo.toml  build.rs
scripts/ci/: check_sys_crate_compatibility.sh
