[workspace]

[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "=0.23.20", default-features = false, features = ["aws-lc-rs", "fips"] }
aws-lc-rs = { version = "= 1.11.1, < 1.12.0", default-features = false, features = ["fips", "bindgen"] }
aws-lc-fips-sys = { version = "= 0.12.15", default-features = false, features = ["bindgen"] }

[patch.crates-io]
aws-lc-rs = { path = "../../aws-lc-rs/aws-lc-rs" }
aws-lc-fips-sys = { path = "../../aws-lc-rs/aws-lc-fips-sys" }
